Closed
Bug 1247122
Opened 10 years ago
Closed 10 years ago
Intermittent 1228456.html,205735-1.xhtml | application crashed [@ mozilla::CycleCollectedJSRuntime::CycleCollectedJSRuntime(JSRuntime*, unsigned int, unsigned int)]
Categories
(Core :: DOM: Workers, defect)
Core
DOM: Workers
Tracking
()
RESOLVED
FIXED
mozilla47
People
(Reporter: KWierso, Assigned: baku)
References
Details
(Keywords: intermittent-failure)
Attachments
(1 file)
|
25.91 KB,
patch
|
khuey
:
review+
lizzard
:
approval-mozilla-beta-
|
Details | Diff | Splinter Review |
| Reporter | ||
Comment 1•10 years ago
|
||
Summary: Intermittent 1228456.html | application crashed [@ mozilla::CycleCollectedJSRuntime::CycleCollectedJSRuntime(JSRuntime*, unsigned int, unsigned int)] → Intermittent 1228456.html,205735-1.xhtml | application crashed [@ mozilla::CycleCollectedJSRuntime::CycleCollectedJSRuntime(JSRuntime*, unsigned int, unsigned int)]
Comment 2•10 years ago
|
||
It looks like this is crashing on this MOZ_CRASH:
mJSRuntime = JS_NewRuntime(aMaxBytes, aMaxNurseryBytes, aParentRuntime);
if (!mJSRuntime) {
MOZ_CRASH();
}
I think that indicates that Firefox ran out of memory while trying to create a new JS runtime.
Comment 3•10 years ago
|
||
I'm moving this to DOM:Workers because it looks like the test creates 99 SharedWorkers, which seems like it could cause an OOM.
Component: JavaScript: GC → DOM: Workers
Yeah ... this seems like something likely to OOM.
Flags: needinfo?(amarchesini)
Comment 5•10 years ago
|
||
As noted in the summary, there are also a few (4 at current count) crashes in dom/xbl/crashtests/205735-1.xhtml. That test looks quite benign, but it is in fact the test that is run immediately after 1228456.html so presumably we are just running out of memory slightly later.
| Comment hidden (Intermittent Failures Robot) |
Updated•10 years ago
|
Version: 45 Branch → unspecified
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 8•10 years ago
|
||
This patch propagates the error in case we have allocation issues.
Assignee: nobody → amarchesini
Flags: needinfo?(amarchesini)
Attachment #8718920 -
Flags: review?(khuey)
Comment on attachment 8718920 [details] [diff] [review]
cycle.patch
Review of attachment 8718920 [details] [diff] [review]:
-----------------------------------------------------------------
::: js/xpconnect/src/XPCJSRuntime.cpp
@@ +3539,2 @@
>
> if (self &&
remove the null check for self while you're here.
Attachment #8718920 -
Flags: review?(khuey) → review+
| Comment hidden (Intermittent Failures Robot) |
Comment 11•10 years ago
|
||
| Comment hidden (Intermittent Failures Robot) |
Comment 13•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox47:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
| Assignee | ||
Comment 15•10 years ago
|
||
Comment on attachment 8718920 [details] [diff] [review]
cycle.patch
Approval Request Comment
[Feature/regressing bug #]: Cycle Collected JSRuntime initialization / workers
[User impact if declined]: Rarely a crash if the initialization of the worker JSRuntime fails.
[Describe test coverage new/current, TreeHerder]: none
[Risks and why]: the patch moves some code in order to return an error value in case the initialization of a new JS runtime fails.
[String/UUID change made/needed]: none
Attachment #8718920 -
Flags: approval-mozilla-aurora?
Comment 16•10 years ago
|
||
This needs beta approval, not Aurora. (This is needed because the crash is apparently impacting e10s, as seen in bug 1259187).
Comment 17•10 years ago
|
||
Comment on attachment 8718920 [details] [diff] [review]
cycle.patch
See comment 15. This is already on Aurora, but not Beta. It is needed to reduce the OOM crash rate, which is unusually high with e10s.
Attachment #8718920 -
Flags: approval-mozilla-aurora? → approval-mozilla-beta?
Updated•10 years ago
|
status-firefox45:
--- → wontfix
status-firefox46:
--- → affected
Comment 18•10 years ago
|
||
Comment on attachment 8718920 [details] [diff] [review]
cycle.patch
If this landed Tuesday or Wednesday this week in 46 beta 6, that would give us maybe a couple of days of e10s experiment information. I think we can wait for 47 here as it is not a high volume crash and seems to be often e10s related.
Attachment #8718920 -
Flags: approval-mozilla-beta? → approval-mozilla-beta-
You need to log in
before you can comment on or make changes to this bug.
Description
•